--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Cryptoassets</title>
   <link rel="icon" sizes="192x192"
   href="https://openclipart.org/image/2400px/svg_to_png/101407/pgb-chip-crypto-3.png">
-  <script src="assets/js/weavedRedirector.js" type="text/javascript"></script>
+  <script src="assets/js/CryptoassetsBalanceCalculator.js" type="text/javascript"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <script type="text/javascript">
@@ -15,15 +15,11 @@
      var btcInvestmentAmount = document.getElementById("btcInvestmentAmount").value;
      var ltcWalletAddress = document.getElementById("ltcWalletAddress").value;
      var ltcInvestmentAmount = document.getElementById("ltcInvestmentAmount").value;
-     alert('BTC Wallet Address: '+btcWalletAddress +'\nBTC Investements amount: '+btcInvestmentAmount+'\nLTC Wallet Address: '+ltcWalletAddress +'\nLTC Investements amount: '+ltcInvestmentAmount);
-     if(btcRadio) {
-      calculateBalance(walletAddress, investmentAmount,document.getElementById("btcRadio").value);
-    } else {
-      calculateBalance(walletAddress, investmentAmount,document.getElementById("ltcRadio").value);
-    }
+     var emailAddress = document.getElementById("emailAddress").value
 
-  }
-</script>
+     calculateBalance(btcWalletAddress, btcInvestmentAmount, ltcWalletAddress, ltcInvestmentAmount, emailAddress);
+   }
+ </script>
 </head>
 <body>
   <br><br>
@@ -60,31 +56,36 @@
               </div>
               <div class="card text-white bg-secondary mb-3">
                 <div class="card-header"><img src="https://upload.wikimedia.org/wikipedia/commons/f/f8/LTC-400.png" height="30px"> Litecoin</div>
-                  <div class="card-body">
-                    <p class="card-text"><div class="form-group">
-                      <label for="walletAddress">LTC Wallet address</label>
-                      <input type="text" class="form-control" id="ltcWalletAddress" placeholder="Enter your BTC wallet address">
+                <div class="card-body">
+                  <p class="card-text"><div class="form-group">
+                    <label for="walletAddress">LTC Wallet address</label>
+                    <input type="text" class="form-control" id="ltcWalletAddress" placeholder="Enter your BTC wallet address">
+                  </div>
+                  <div class="form-group">
+                    <label for="Investement">LTC Total Investment</label>
+                    <div class="input-group">
+                      <span class="input-group-addon">€</span>
+                      <input type="text" class="form-control" id="ltcInvestmentAmount" placeholder="0">
+                      <span class="input-group-addon">.00</span>
                     </div>
-                    <div class="form-group">
-                      <label for="Investement">LTC Total Investment</label>
-                      <div class="input-group">
-                        <span class="input-group-addon">€</span>
-                        <input type="text" class="form-control" id="ltcInvestmentAmount" placeholder="0">
-                        <span class="input-group-addon">.00</span>
-                      </div>
-                    </div>
-                  </p>
-                </div>
+                  </div>
+                </p>
               </div>
-              <button type="submit" class="btn btn-primary btn-lg btn-block">Calculate</button>
-            </form>
-          </p>
-        </div>
+            </div>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="emailAddress" aria-describedby="emailHelp" placeholder="Enter your email address">
+              <small id="emailHelp" class="form-text text-muted">Enter the email address where you want to receive the crypto-report.</small>
+            </div>
+            <button type="submit" class="btn btn-primary btn-lg btn-block">Calculate</button>
+          </form>
+        </p>
       </div>
     </div>
-    <div class="col">
-    </div>
   </div>
+  <div class="col">
+  </div>
+</div>
 </div>
 </body>
 </html>
