--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" sizes="192x192"
   href="https://openclipart.org/image/2400px/svg_to_png/101407/pgb-chip-crypto-3.png">
   <script src="assets/js/CryptoassetsBalanceCalculator.js" type="text/javascript"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <script type="text/javascript">
@@ -17,13 +18,13 @@
      var ltcInvestmentAmount = document.getElementById("ltcInvestmentAmount").value;
      var emailAddress = document.getElementById("emailAddress").value
 
-     calculateBalance(btcWalletAddress, btcInvestmentAmount, ltcWalletAddress, ltcInvestmentAmount, emailAddress);
+     //getCryptoValues(btcWalletAddress, btcInvestmentAmount, ltcWalletAddress, ltcInvestmentAmount, emailAddress);
    }
  </script>
 </head>
 <body>
   <br><br>
-  <div class="container">
+  <div class="container" id="container">
     <div class="row">
       <div class="col">
       </div>
@@ -80,6 +81,7 @@
             <button type="submit" class="btn btn-primary btn-lg btn-block">Calculate</button>
           </form>
         </p>
+        <div id="ghost"></div>
       </div>
     </div>
   </div>
