Added results page draft, still no validation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      var ltcInvestmentAmount = document.getElementById("ltcInvestmentAmount").value;
      var emailAddress = document.getElementById("emailAddress").value
 
-     //getCryptoValues(btcWalletAddress, btcInvestmentAmount, ltcWalletAddress, ltcInvestmentAmount, emailAddress);
+     getCryptoValues(btcWalletAddress, btcInvestmentAmount, ltcWalletAddress, ltcInvestmentAmount, emailAddress);
    }
  </script>
 </head>
