--- a/index.html
+++ b/index.html
@@ -10,17 +10,6 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-  <script type="text/javascript">
-    function CryptoAssetsCalc() {
-     var btcWalletAddress = document.getElementById("btcWalletAddress").value;
-     var btcInvestmentAmount = document.getElementById("btcInvestmentAmount").value;
-     var ltcWalletAddress = document.getElementById("ltcWalletAddress").value;
-     var ltcInvestmentAmount = document.getElementById("ltcInvestmentAmount").value;
-     var emailAddress = document.getElementById("emailAddress").value
-
-     getCryptoValues(btcWalletAddress, btcInvestmentAmount, ltcWalletAddress, ltcInvestmentAmount, emailAddress);
-   }
- </script>
 </head>
 <body>
   <br><br>
@@ -32,7 +21,7 @@
         <div class="card">
           <h4 class="card-header">
             <img src="https://openclipart.org/image/2400px/svg_to_png/101407/pgb-chip-crypto-3.png" height="50px">
-            Cryptoassets Balance
+            Cryptoassets Balance 
           </h4>
           <div class="card-body">
             <p class="card-text">
@@ -73,6 +62,18 @@
                 </p>
               </div>
             </div>
+            <div class="container">
+              <div class="row">
+                <div class="col">
+                </div>
+                <div class="col">
+                </div>
+                <div class="col-0">
+                  <span class="badge" id="automagicity">Automagic</span>
+                </div>
+              </div>
+            </div>
+            
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
               <input type="email" class="form-control" id="emailAddress" aria-describedby="emailHelp" placeholder="Enter your email address">
