--- a/index.html
+++ b/index.html
@@ -62,27 +62,13 @@
                 </p>
               </div>
             </div>
-            <div class="container">
-              <div class="row">
-                <div class="col">
-                </div>
-                <div class="col">
-                </div>
-                <div class="col-0">
-                  <span class="badge" id="automagicity">Automagic</span>
-                </div>
-              </div>
-            </div>
-            
-            <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="emailAddress" aria-describedby="emailHelp" placeholder="Enter your email address">
-              <small id="emailHelp" class="form-text text-muted">Enter the email address where you want to receive the crypto-report.</small>
-            </div>
-            <button type="submit" class="btn btn-primary btn-lg btn-block">Calculate</button>
+            <button type="submit" class="btn btn-primary btn-lg btn-block" id="calculate">Calculate</button>
           </form>
         </p>
-        <div id="ghost"></div>
+        <div class="progress">
+              <div id="progress-bar" class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+            </div>
+            <p class="text-center" id="progressbartext"></p>
       </div>
     </div>
   </div>
