--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" sizes="192x192"
   href="https://openclipart.org/image/2400px/svg_to_png/101407/pgb-chip-crypto-3.png">
   <script src="assets/js/CryptoassetsBalanceCalculator.js" type="text/javascript"></script>
+  <script src="assets/js/Commons.js" type="text/javascript"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
@@ -66,9 +67,9 @@
           </form>
         </p>
         <div class="progress">
-              <div id="progress-bar" class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-            </div>
-            <p class="text-center" id="progressbartext"></p>
+          <div id="progress-bar" class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+        </div>
+        <p class="text-center" id="progressbartext"></p>
       </div>
     </div>
   </div>
