--- a/results.html
+++ b/results.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>Cryptoassets Results</title>
   <link rel="icon" sizes="192x192"
   href="https://openclipart.org/image/2400px/svg_to_png/101407/pgb-chip-crypto-3.png">
   <script src="assets/js/CryptoassetsBalanceResults.js" type="text/javascript"></script>
+  <script src="assets/js/Commons.js" type="text/javascript"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
@@ -23,21 +23,17 @@
           </h4>
           <div class="card-body">
             <p class="card-text">
-
               <div class="card text-white bg-warning mb-3">
                 <div class="card-header"><img src="https://www.belgacoin.com/file.jsp?f=bitcoin" height="30px"> Bitcoin</div>
                 <div class="card-body">
                   <p class="card-text">
-
                     <div class="alert alert-primary" role="alert" id="btcOverview">
                     </div>
                     <div class="alert" role="alert" id="btcBalance">
                     </div>
-
                   </p>
                 </div>
               </div>
-
               <div class="card text-white bg-secondary mb-3">
                 <div class="card-header"><img src="https://upload.wikimedia.org/wikipedia/commons/f/f8/LTC-400.png" height="30px"> Litecoin</div>
                 <div class="card-body">
@@ -49,7 +45,6 @@
                   </p>
                 </div>
               </div>
-
             </p>
           </div>
         </div>
