--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Cryptoassets</title>
   <link rel="icon" sizes="192x192"
   href="https://openclipart.org/image/2400px/svg_to_png/101407/pgb-chip-crypto-3.png">
+  <link rel="apple-touch-icon" href="https://openclipart.org/image/2400px/svg_to_png/101407/pgb-chip-crypto-3.png">
   <script src="assets/js/CryptoassetsBalanceCalculator.js" type="text/javascript"></script>
   <script src="assets/js/Commons.js" type="text/javascript"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
